--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html>
 <head>
   <title>Ops Team App</title>
+	
+	<!-- Meta tags for manifest -->
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="application-name" content="calUP1">
+	<meta name="apple-mobile-web-app-title" content="CalUP1">
+	<meta name="theme-color" content="#b3ffff">
+	<meta name="msapplication-navbutton-color" content="#ffff00">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	<meta name="msapplication-starturl" content="https://flow-randd.github.io/calendarUpdate/"> 
+	
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
