--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<!-- Meta tags for manifest -->
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="application-name" content="calUP1">
-	<meta name="apple-mobile-web-app-title" content="CalUP1">
-	<meta name="theme-color" content="#b3ffff">
-	<meta name="msapplication-navbutton-color" content="#ffff00">
+	<meta name="application-name" content="opsApp">
+	<meta name="apple-mobile-web-app-title" content="opsApp">
+	<meta name="theme-color" content="#c6c6c6">
+	<meta name="msapplication-navbutton-color" content="#c6c6c6">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-	<meta name="msapplication-starturl" content="https://flow-randd.github.io/calendarUpdate/"> 
+	<meta name="msapplication-starturl" content="https://sammw.github.io/opsTeam/"> 
 	
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
