--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 </div>	
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
+<div class="modal fade bd-modal-lg" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content modal-lg">
       <div class="modal-header text-white bg-dark">
         <h5 class="modal-title" id="exampleModalLabel">Sign Position</h5>
         <button type="button" class="close text-white bg-dark" data-dismiss="modal" aria-label="Close">
